--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,19 @@
     "dev": "nodemon -r tsconfig-paths/register src/app.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Or Hasson",
   "license": "ISC",
   "dependencies": {
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "mongoose": "^6.8.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
