--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "nodemon -r tsconfig-paths\\register src\\app.ts | .\\node_modules\\.bin\\bunyan",
     "lint": "eslint .. --ext .ts",
-    "lint:fix": "eslint .. --ext .ts --fix" ,
+    "lint:fix": "eslint .. --ext .ts --fix",
     "prettier:check": "prettier --check src/**/*.{ts,json}",
-    "prettier:fix": "prettier --write src/**/*.{ts,json}"
+    "prettier:fix": "prettier --write src/**/*.{ts,json}",
+    "build": "ttsc -p ."
   },
   "keywords": [],
   "author": "Or Hasson",
@@ -28,7 +29,9 @@
     "mongoose": "^6.8.0",
     "redis": "^4.5.1",
     "socket.io": "^4.5.4",
-    "typescript": "^4.9.4"
+    "ttypescript": "^1.5.15",
+    "typescript": "^4.9.4",
+    "typescript-transform-paths": "^3.4.4"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.8",
