--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,8 @@ SECRET_KEY_ONE=
 SECRET_KEY_TWO=
 CLIENT_URL=http://localhost:3000
 REDIS_HOST=redis://localhost:6379
+
+## Cloudinary vars
+CLOUD_NAME=
+CLOUD_API_KEY=
+CLOUD_API_SECRET=
