add auth validation schemes

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -106,6 +106,7 @@
       "transform": "typescript-transform-paths", "afterDeclarations": true
     }],
     "paths": {
+      "@auth/*": ["src/features/auth/*"],
       "@global/*": ["src/shared/globals/*"],
       "@service/*": ["src/shared/services/*"],
       "@socket/*": ["src/shared/sockets/*"],
