--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.7.0",
     "mongoose": "^6.8.0",
     "redis": "^4.5.1",
     "socket.io": "^4.5.4",
