create signup,signin,signout controller, routes, schemas, inteface and joi decorators

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -107,6 +107,7 @@
     }],
     "paths": {
       "@auth/*": ["src/features/auth/*"],
+      "@user/*": ["src/features/user/*"],
       "@global/*": ["src/shared/globals/*"],
       "@service/*": ["src/shared/services/*"],
       "@socket/*": ["src/shared/sockets/*"],
