--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@socket.io/redis-adapter": "^8.0.0",
+    "bcryptjs": "^2.4.3",
     "bunyan": "^1.8.15",
     "cloudinary": "^1.33.0",
     "compression": "^1.7.4",
@@ -28,6 +29,8 @@
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.8.0",
     "redis": "^4.5.1",
     "socket.io": "^4.5.4",
@@ -36,12 +39,15 @@
     "typescript-transform-paths": "^3.4.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/bunyan": "^1.8.8",
     "@types/compression": "^1.7.2",
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/hpp": "^0.2.2",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.191",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.30.0",
