--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,7 @@ DATABASE_URI=
 PORT=5000
 JWT_TOKEN=
 NODE_ENV=development
+TOKEN_EXPIRES_IN_HOURS="1h"
 SECRET_KEY_ONE=
 SECRET_KEY_TWO=
 CLIENT_URL=http://localhost:3000
