--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,9 @@ REDIS_HOST=redis://localhost:6379
 CLOUD_NAME=
 CLOUD_API_KEY=
 CLOUD_API_SECRET=
+
+## Emails vars
+SENDER_EMAIL=
+SENDER_EMAIL_PASSWORD=
+SENDGRID_API_KEY=
+SENDGRID_SENDER=
