--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@bull-board/express": "^4.9.0",
     "@bull-board/ui": "^4.9.0",
+    "@sendgrid/mail": "^7.7.0",
     "@socket.io/redis-adapter": "^8.0.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.10.2",
@@ -26,6 +27,7 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^6.0.1",
@@ -35,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.8.0",
+    "nodemailer": "^6.8.0",
     "redis": "^4.5.1",
     "socket.io": "^4.5.4",
     "ttypescript": "^1.5.15",
@@ -52,6 +55,7 @@
     "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.191",
+    "@types/nodemailer": "^6.4.7",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.30.0",
