--- a/backend/package.json
+++ b/backend/package.json
@@ -33,9 +33,11 @@
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "ip": "^1.1.8",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.0",
     "nodemailer": "^6.8.0",
     "redis": "^4.5.1",
@@ -54,6 +56,7 @@
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.15",
     "@types/hpp": "^0.2.2",
+    "@types/ip": "^1.1.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.191",
     "@types/nodemailer": "^6.4.7",
