--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@bull-board/express": "^4.9.0",
     "@bull-board/ui": "^4.9.0",
+    "@sendgrid/mail": "^7.7.0",
     "@socket.io/redis-adapter": "^8.0.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.10.2",
@@ -26,15 +27,19 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "ip": "^1.1.8",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.0",
+    "nodemailer": "^6.8.0",
     "redis": "^4.5.1",
     "socket.io": "^4.5.4",
     "ttypescript": "^1.5.15",
@@ -48,10 +53,13 @@
     "@types/compression": "^1.7.2",
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
+    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.15",
     "@types/hpp": "^0.2.2",
+    "@types/ip": "^1.1.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.191",
+    "@types/nodemailer": "^6.4.7",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.30.0",
