add test script

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint .. --ext .ts --fix",
     "prettier:check": "prettier --check src/**/*.{ts,json}",
     "prettier:fix": "prettier --write src/**/*.{ts,json}",
+    "test": "jest --coverage=true -w=1 --forceExit --detectOpenHandles --watchAll=false",
     "build": "ttsc -p ."
   },
   "keywords": [],
