create starcture for posts feature, adding schemas and interface

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -132,6 +132,9 @@
       "@auth/*": [
         "src/features/auth/*"
       ],
+      "@post/*": [
+        "src/features/user/*"
+      ],
       "@user/*": [
         "src/features/user/*"
       ],
