--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@sendgrid/mail": "^7.7.0",
     "@socket.io/redis-adapter": "^8.1.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "bull": "^4.10.4",
     "bunyan": "^1.8.15",
     "cloudinary": "^1.35.0",
