--- a/backend/package.json
+++ b/backend/package.json
@@ -4,52 +4,59 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "NODE_ENV=production pm2 start ./build/src/app.js -i 5 --attach --watch | ./node_modules/.bin/bunyan",
+    "stop": "pm2 stop all",
+    "delete": "pm2 delete all",
     "dev": "nodemon -r tsconfig-paths\\register src\\app.ts | .\\node_modules\\.bin\\bunyan",
     "lint": "eslint .. --ext .ts",
     "lint:fix": "eslint .. --ext .ts --fix",
     "prettier:check": "prettier --check src/**/*.{ts,json}",
     "prettier:fix": "prettier --write src/**/*.{ts,json}",
     "test": "jest --coverage=true -w=1 --forceExit --detectOpenHandles --watchAll=false",
-    "build": "ttsc -p ."
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "seeds:dev": "npx ts-node src/seeds.ts",
+    "seeds:prod": "npx ts-node ./build/src/seeds.js"
   },
   "keywords": [],
   "author": "Or Hasson",
   "license": "ISC",
   "dependencies": {
-    "@bull-board/express": "^4.9.0",
-    "@bull-board/ui": "^4.9.0",
+    "@bull-board/express": "^4.12.1",
+    "@faker-js/faker": "^7.6.0",
+    "@jest/types": "^29.4.3",
     "@sendgrid/mail": "^7.7.0",
     "@socket.io/redis-adapter": "^8.1.0",
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
     "bull": "^4.10.4",
+    "bullmq": "^3.10.0",
     "bunyan": "^1.8.15",
+    "canvas": "^2.11.0",
     "cloudinary": "^1.35.0",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.9",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "helmet": "^6.1.5",
+    "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
     "ip": "^1.1.8",
-    "joi": "^17.9.1",
-    "jsonwebtoken": "^8.5.1",
+    "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "mongoose": "^6.10.5",
+    "mongoose": "^7.0.0",
     "nodemailer": "^6.9.1",
     "redis": "^4.6.5",
     "socket.io": "^4.6.1",
-    "ttypescript": "^1.5.15",
-    "typescript": "^5.0.4",
+    "swagger-stats": "^0.99.5",
+    "typescript": "^4.9.5",
     "typescript-transform-paths": "^3.4.6"
   },
   "devDependencies": {
-    "@jest/types": "^29.5.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/bull": "^4.10.0",
     "@types/bunyan": "^1.8.8",
@@ -60,22 +67,21 @@
     "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
     "@types/ip": "^1.1.0",
-    "@types/jest": "^29.5.0",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/lodash": "^4.14.192",
+    "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/lodash": "^4.14.191",
     "@types/nodemailer": "^6.4.7",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard-with-typescript": "^24.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.5.0",
-    "prettier": "^2.8.7",
-    "ts-jest": "^29.1.0",
+    "@types/redis-info": "^3.0.0",
+    "@types/swagger-stats": "^0.95.8",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "jest": "^29.4.3",
+    "prettier": "^2.8.4",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0"
+    "tsc-alias": "^1.8.2",
+    "tsconfig-paths": "^3.14.2"
   }
 }
