--- a/backend/package.json
+++ b/backend/package.json
@@ -52,6 +52,7 @@
     "nodemailer": "^6.9.4",
     "redis": "^4.6.7",
     "socket.io": "^4.7.1",
+    "supertest": "^6.3.3",
     "swagger-stats": "^0.99.7",
     "typescript": "^4.9.5",
     "typescript-transform-paths": "^3.4.6"
@@ -72,6 +73,7 @@
     "@types/lodash": "^4.14.195",
     "@types/nodemailer": "^6.4.8",
     "@types/redis-info": "^3.0.0",
+    "@types/supertest": "^2.0.16",
     "@types/swagger-stats": "^0.95.8",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
