starting adding health routes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,3 +18,4 @@ SENDER_EMAIL=
 SENDER_EMAIL_PASSWORD=
 SENDGRID_API_KEY=
 SENDGRID_SENDER=
+EC2_URL=http://public-ip-of-ec2/latest/meta-data/instance-id
