--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,7 @@
     "@jest/types": "^29.6.1",
     "@sendgrid/mail": "^7.7.0",
     "@socket.io/redis-adapter": "^8.2.1",
-    "axios": "^1.4.0",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "bull": "^4.10.4",
     "bullmq": "^3.15.8",
@@ -80,10 +80,10 @@
     "eslint-config-prettier": "^8.6.0",
     "jest": "^29.6.1",
     "prettier": "^2.8.8",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.7",
-    "tsconfig-paths": "^3.14.2",
-    "supertest": "^6.3.3"
+    "tsconfig-paths": "^3.14.2"
   }
 }
