exit .env.exmaple

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,6 +8,8 @@ SECRET_KEY_TWO=
 CLIENT_URL=http://localhost:3000
 REDIS_HOST=redis://localhost:6379
 
+API_URL=http://localhost:5000/api/v1
+
 ## Cloudinary vars
 CLOUD_NAME=
 CLOUD_API_KEY=
